@@ -8,20 +8,13 @@ See the file
 for how to compile and install this program.
 
 <P>
-If you want to run this program <B>without installing,</b> you HAVE to set the
-LD_LIBRARY_PATH variable so that freewrl can find the shared libs. Try:
+If you want to run this program <B>without installing,</b> 
+have a look at the <b>"runme-standalone"</b> file in the 
+build directory. It should give you enough information to enable
+you to run FreeWRL without installing.
 <p>
-setenv LD_LIBRARY_PATH /home/luigi/FreeWRL-1.08/JS/js/src/Linux_All_OPT.OBJ/:/home/luigi/FreeWRL-1.08/blib/arch/auto/VRML/VRMLFunc/
-<p>
-Of course, change the paths to suit your build directory. The syntax above
-assumes using csh or equivalent for your shell.
-<p>
-It should be noted that the freewrl executable file is in the directory
-"CFrontEnd". ie, the freewrl executable, using the paths above, is:
-<p>
-/home/luigi/FreeWRL-1.11/CFrontEnd/freewrl
-<p>
-and, of course, when building (see the INSTALL.html file), you should "make",
+Of course, if you want to run without installing,
+you need only to "make",
 not "make install".
 
 <p>
